# btwattch2-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  connection.rs  crc8.rs  lib.rs  log.rs  main.rs  output.rs  payload.rs
src/agent/: client.rs  mod.rs  protocol.rs  server.rs
