[package]
name = "btwattch2"
version = "0.2.2"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
btleplug = "0.12"
chrono = "0.4.45"
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
uuid = "1.24.0"
