[package]
name = "btwattch2"
version = "1.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
btleplug = "0.12"
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
futures = "0.3.33"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["io-util", "macros", "net", "rt-multi-thread", "time", "signal"] }
uuid = "1.24.0"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
